# checkers-bot-s-

./: .clang-tidy  .gitignore  CMakeLists.txt  CheckerMCST.h  GameState.cpp  GameState.h  MCST.h  README.md  create_bld.sh  main.cpp
Tests/: CMakeLists.txt  test.cpp
